# StockExchangeClone

./: CMakeLists.txt  README.md  main.cpp
BankAccount/: BankAccount.cpp  BankAccount.h
Order/: Buy.cpp  Buy.h  Order.cpp  Order.h  Sell.cpp  Sell.h
OrderBook/: OrderBook.cpp  OrderBook.h
OrderType/: Limit.cpp  Limit.h  Market.cpp  Market.h  OrderType.cpp  OrderType.h
Portfolio/: Portfolio.cpp  Portfolio.h
Stock/: Stock.cpp  Stock.h
Tests/: BankAccountTests.cpp  StockTests.cpp
Trader/: Trader.cpp  Trader.h
TradingSystem/: TradingSystem.cpp  TradingSystem.h
